2001-08-16  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* Makefile.in,...: Kicked out files from the CVS repository
	that don't belong there and added an autogen.sh script.

	* lib/parser-smi.y,data.c: Fixed more memory leaks.

2001-08-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* doc/draft-irtf-nmrg-smi-xml-00.txt,smi.dtd: Added these
	files to document the xml output driver. Note that this
	Internet Draft has expired.
	
	* lib/parser-smi.y,data.c: Added Bill's dmalloc patch and
	trimmed down the number of non-freed chunks significantly.

2001-06-25  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Added some checks for zero-length
	descriptions, references, organizations, contacts, formats
	and units strings.

2001-06-12  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Added special treatment of RFC1065-SMI.

	* lib/parser-smi.y: Added optional OID between modulename and
	`DEFINITIONS' (which is legal in ASN.1).

2001-06-11  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-jax.c: Fixed a bug in the generated code for
	notifications that have multiple OBJECTS; reported by
	Teemu Koponen.
	
	* tools/smicache.in,lib/smi.c: Added a MIB caching scheme: 
	The configuration file may contain the new `cache' statement
	which, in combination with an external caching program like
	smicache, can be used to fetch MIB modules that are not found
	in one of the local directories from any (remote?) resources.
	Note that this is *experimental*!
	
2001-06-06  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y,check.c: Bill contributed another table check
	and improved two other checks.

	* lib/parser-smi.y: fixed a bug in checkObjects() reported by
	Dave Shield.

2001-05-08  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-python.c: Keith submitted a patch that turns
	(unordered) index element sets into (ordered) lists. However,
	it might cause other problems.
	
2001-05-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
